2007-09-21  Lars Sonnenschein  <sonne@mail.cern.ch>

	* Added HepEx0505013 analysis and JetShape projection (some fixes
	by AB.)

2007-09-21  Andy Buckley  <andy@insectnation.org>

	* Fixed lots if bugs and bad practice in HepEx0505013 (to make it
	compile-able!)

	* Downclassed the log messages from the Test analysis to DEBUG
	level.

	* Added isEmpty() method to final state projection.

	* Added testing for empty final state and useful debug log
	messages to sphericity projection.

2007-09-20  Andy Buckley  <andy@insectnation.org>

	* Added Hemispheres projection, which calculates event hemisphere
	masses and broadenings.

2007-09-19  Andy Buckley  <andy@insectnation.org>

	* Added an explicit copy assignment operator to Particle: the
	absence of one of these was responsible for the double-delete
	error.

	* Added a "fuzzy equals" utility function for float/double types
	to Utils.hh (which already contains a variety of handy little
	functions).

	* Removed deprecated Beam::operator().

	* Added ChargedFinalState projection and de-pointered the
	contained FinalState projection in VetoedFinalState.

2007-09-18  Andy Buckley  <andy@insectnation.org>

	* Major bug fixes to the regularised version of the sphericity
	projection (and hence the Parisi tensor projection). Don't trust
	C & D param results from any previous version!

	* Added extra methods to thrust and sphericity projections to get
	the oblateness and the sphericity basis (currently returns dummy
	axes since I can't yet work out how to get the similarity
	transform eigenvectors from CLHEP)

2007-09-14  Andy Buckley  <andy@insectnation.org>

	* Merged in a branch of pluggable analysis mechanisms.

2007-06-25  Jon Butterworth  <jmb@hep.ucl.ac.uk>

	* Fixed some bugs in the root output for DataPoint.h

2007-06-25  Andy Buckley  <andy@insectnation.org>

	* include/Rivet/**/Makefile.am: No longer installing headers for
	"internal" functionality.
